<resources>
    <string name="app_name">Health Practice</string>
    <string name="title_home">Home</string>
    <string name="title_practice">Practice</string>
    <string name="title_profile">Profile</string>
    <string name="best_practice_day">Best Practice day</string>
    <string name="history">History</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="distance_km">Distance (Km)</string>
    <string name="title_weather">Weather</string>
    <string name="speed_km">Speed (Km/h)</string>
    <string name="time_min">Time </string>
    <string name="time">Time </string>
    <string name="energy_calo">Energy (Kcal)</string>
    <string name="minte">min</string>
    <string name="hour">hour</string>
    <string name="distance">Distance</string>
    <string name="energy">Calo</string>
    <string name="speed">Speed</string>

    <!-- Google map -->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAX38GQpUkkUpjQuOX1Tz1pq0opqDThQiM</string>
    <string name="current_location">Current Location</string>

    <string name="preference_file_key">com.tantnt.android.runstatistic.PREFERENCE_FILE_KEY</string>
    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>

    <!-- confirmation buttons text -->
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="got_it">Got it!</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string name="no_internet_connection">You are currently not connecting to the Internet. Pleas turn on your connection to start Practice</string>

    <!-- -->
    <string name="confirm_stop_practice">Do you sure that you want to stop this practice</string>
    <string name="result">Result</string>
    <string name="start">Start</string>

    <!-- Practice status -->
    <string name="you_are_not_active">You are not active</string>
    <string name="status_walking">Walking</string>
    <string name="status_running">Rungning</string>
    <string name="status_pausing">Pausing</string>
    <string name="status_completed">Completed</string>

    <!-- Practice type-->
    <string name="practice_type_walking">Walking</string>
    <string name="practice_type_cycling">Cycling</string>
    <string name="practice_type_running">Running</string>
    <string name="promote_workouts_to_improve_your_health">Promote workouts to improve your health</string>
    <string name="location_setting_required">This app requires Location setting enabled with "High Accuracy" mode to perform this feature. Enable Location Setting?</string>

    <string name="select_target_title">Set daily target step</string>
    <string name="select_target_under_average">Under medium</string>
    <string name="select_target_average">Medium</string>
    <string name="select_target_high_active">High active</string>
    <string name="select_target_weight_loss">Weight loss</string>
    <string name="select_target_muscle_gain">Muscle gain</string>
    <string name="select_target_adjust">Adjust</string>
    <string name="select_practice_type">select practice type</string>
    <string name="steps">Steps</string>
    <string name="practice_day_description_has_number_activities">%d activities - %.2f Km</string>
    <string name="practice_day_description_has_only_1_activity">1 activity - %.2f Km</string>
    <string name="share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="notification">Notification</string>
    <string name="confirmation">Confirmation</string>
    <string name="view_more">View more</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="current_level">G%d</string>
    <string name="step_to_next_level">You need %d step to reach level G%d</string>
    <string name="supper_man">you are a Supper man</string>

    <!-- Notification  -->
    <string name="notification_extra_message">extra_message</string>
    <string name="notification_channel_id">fcm_default_channel</string>
    <string name="notification_channel_name" translatable="true">Breakfast</string>
    <string name="notification_channel_description">Runstatistic reminder</string>
    <string name="notification_practice_channel_id">practice_channel</string>
    <string name="notification_practice_channel_name" translatable="true">Practice</string>
    <string name="notification_practice_channel_description">Practice reminder</string>
    <string name="notification_not_practice_1_day">Hi! You are not practice for a day! Practice to makes your health better!!</string>
    <string name="notification_not_practice_2_day">Hi! You are not practice for a day! Practice to makes your health better!!</string>
    <string name="notification_not_practice_long_time">Hi! You are not practice for a day! Practice to makes your health better!!</string>


</resources>
