<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tantnt.android.runstatistic.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_historyFragment"
            app:destination="@id/historyFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_practice"
        android:name="com.tantnt.android.runstatistic.ui.practice.PracticeFragment"
        android:label="@string/title_practice"
        tools:layout="@layout/fragment_practice" >
        <action
            android:id="@+id/action_navigation_practice_to_resultFragment"
            app:destination="@id/resultFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tantnt.android.runstatistic.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/historyFragment"
        android:name="com.tantnt.android.runstatistic.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.tantnt.android.runstatistic.ui.result.ResultFragment"
        android:label="fragment_result"
        tools:layout="@layout/fragment_result" >
        <argument
            android:name="image_file_path"
            app:argType="string" />
        <argument
            android:name="practice_type"
            app:argType="integer" />
        <argument
            android:name="practice_distance"
            app:argType="float" />
        <argument
            android:name="practice_duration"
            app:argType="long" />
        <argument
            android:name="practice_speed"
            app:argType="float" />
        <argument
            android:name="practice_calo"
            app:argType="float" />
    </fragment>
</navigation>
