<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        style="@style/TextWhiteBoldRatherBig"
        android:background="#2E7D32"
        android:text="@string/confirmation" />


    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        style="@style/TextBlackMedium"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:gravity="center"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            style="@style/TextBlackMedium"/>
        <Button
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ok"
            style="@style/TextGreenkMedium"/>

    </LinearLayout>


</LinearLayout>