<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/message_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        style="@style/TextWhiteBoldRatherBig"
        android:background="#2E7D32"
        android:text="@string/confirmation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/message_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/no_internet_connection"
        android:layout_margin="@dimen/margin_default"
        android:gravity="center"
        style="@style/TextBlackMedium"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_title"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            style="@style/GreenButton"
            android:background="@drawable/btn_rounded_green"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

</androidx.constraintlayout.widget.ConstraintLayout>