<?xml version="1.0" encoding="utf-8"?>

<LinearLayout     xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="256dp"
    android:orientation="vertical"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="128dp">

        <!-- Walking -->
        <LinearLayout
            android:id="@+id/walking_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="128dp"
            android:weightSum="4"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="0dp"
                android:padding="@dimen/margin_small">
                <ProgressBar
                    android:id="@+id/walking_circle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:background="@drawable/circle_shape"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:progress="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <ImageButton
                    android:id="@+id/walking_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/walking_selected_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/walking_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/TextBlackBoldMedium"
                android:text="@string/practice_type_walking"/>
        </LinearLayout>

        <!-- Running -->
        <LinearLayout
            android:id="@+id/running_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="128dp"
            android:weightSum="4"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="0dp"
                android:padding="@dimen/margin_small">
                <ProgressBar
                    android:id="@+id/running_circle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:background="@drawable/circle_shape"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:progress="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <ImageButton
                    android:id="@+id/running_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/running_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/running_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/TextBlackBoldMedium"
                android:text="@string/practice_type_running"/>
        </LinearLayout>

        !-- Cycling -->
        <LinearLayout
            android:id="@+id/cycling_layout"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="128dp"
            android:weightSum="4"
            android:orientation="vertical"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_weight="3"
                android:layout_height="0dp"
                android:padding="@dimen/margin_small">
                <ProgressBar
                    android:id="@+id/cycling_circle"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circular_progress_bar"
                    android:background="@drawable/circle_shape"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:progress="100"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />
                <ImageButton
                    android:id="@+id/cycling_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cycling_icon"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/cycling_text"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                style="@style/TextBlackBoldMedium"
                android:text="@string/practice_type_cycling"/>
        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promote_workouts_to_improve_your_health"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:gravity="center"
            style="@style/TextBlackMedium"
            app:layout_constraintStart_toStartOf="@id/confirm_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/confirm_button"
            />

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="100dp"
            android:layout_height="30dp"
            style="@style/GreenButton"
            android:background="@drawable/btn_rounded_green"
            android:text="@string/ok"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/confirm_layout"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>