<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".ui.result.ResultFragment">

    <ImageView
        android:layout_margin="@dimen/margin_small"
        android:id="@+id/share_img"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        />

    <LinearLayout

        android:layout_margin="@dimen/margin_small"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/practice_type_image"
                android:background="@drawable/cycling_selected_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="@dimen/margin_small"
                app:layout_constraintBottom_toTopOf="@+id/distance_value"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/distance_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:gravity="center"
                android:text="25"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_default"
                app:layout_constraintTop_toBottomOf="@id/practice_type_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@+id/distance_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:gravity="center"
                android:text="Km"
                android:textSize="12sp"
                android:layout_marginEnd="@dimen/margin_small"
                app:layout_constraintTop_toBottomOf="@id/practice_type_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/distance_result"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="3"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/speed_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="9">
                <ImageView
                    android:id="@+id/speed_icon"
                    android:background="@drawable/road_icon"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/speed_title"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:gravity="left"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/speed_km"/>
                <TextView
                    android:id="@+id/speed_result"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textColor="#111111"
                    android:layout_gravity="center_vertical"
                    android:text="0"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/time_layout"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:weightSum="9">
                <ImageView
                    android:id="@+id/time_icon"
                    android:background="@drawable/time"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/time_title"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/time_min" />
                <TextView
                    android:id="@+id/time_result"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="00:00"
                    android:textColor="#111111"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/calo_layout"
                android:layout_height="0dp"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:weightSum="9">
                <ImageView
                    android:id="@+id/calo_icon"
                    android:background="@drawable/energy"
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center_vertical"
                    />
                <TextView
                    android:id="@+id/calo_title"
                    android:layout_marginStart="@dimen/margin_small"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/energy_calo" />
                <TextView
                    android:id="@+id/calo_result"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#111111"
                    android:text="5.2"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/share_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/share_icon_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_small"
            android:text="@string/share"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/share_btn"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>